<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/DetailsContainer"
    android:background="@color/regActivityColorPrimaryTransparent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:id="@+id/DetailsFragmentToolbar"
        android:background="#00FFFFFF"
        android:elevation="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/DetailsFragmentLayout"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="32dp"
        android:layout_centerInParent="true"
        android:background="@drawable/fragment_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:id="@+id/DetailsFullNameText"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/DetailsNameText"
                        android:layout_marginEnd="4dp"
                        android:textColor="@color/regActivityColorAccentSecondary"
                        android:textSize="16sp"
                        android:text="@string/FirstNameText"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:id="@+id/DetailsLastNameText"
                        android:textColor="@color/regActivityColorAccentSecondary"
                        android:textSize="16sp"
                        android:text="@string/LastNameText"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:id="@+id/DetailsFullNameEditText"
                    android:layout_below="@id/DetailsFullNameText"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:inputType="textPersonName"
                        android:layout_weight="1"
                        android:hint="@string/FirstNameEditText"
                        android:id="@+id/DetailsNameEditText"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:maxLength="20"
                        android:background="@drawable/edit_text_background"
                        android:layout_marginEnd="4dp"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:inputType="textPersonName"
                        android:layout_height="48dp"
                        android:layout_marginStart="4dp"
                        android:hint="@string/LastNameEditText"
                        android:id="@+id/DetailsLastNameEditText"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:maxLength="20"
                        android:background="@drawable/edit_text_background"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/DetailsNameReqText"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/DetailsFullNameEditText"
                    android:textColor="@color/regActivityNegativeColor"
                    android:textSize="12sp"
                    android:text="@string/RequiredText"
                    android:visibility="invisible"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/DetailsFullNameEditText"
                    android:id="@+id/DetailsHeight"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/DetailsHeightText"
                        android:textColor="@color/regActivityColorAccentSecondary"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/HeightText"/>

                    <NumberPicker
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/DetailsFeetNumPick"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edit_text_background"/>

                    <NumberPicker
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/DetailsInchNumPick"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/edit_text_background"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/DetailsHeight"
                    android:id="@+id/DetailsZipContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/DetailsZipText"
                        android:textColor="@color/regActivityColorAccentSecondary"
                        android:textSize="16sp"
                        android:text="@string/ZipCodeText"/>

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="48dp"
                        android:inputType="number"
                        android:maxLength="5"
                        android:hint="@string/ZipCodeEditText"
                        android:id="@+id/DetailsZipEditText"
                        android:textColor="@android:color/black"
                        android:textCursorDrawable="@null"
                        android:textSize="16sp"
                        android:paddingStart="24dp"
                        android:paddingEnd="24dp"
                        android:background="@drawable/edit_text_background"/>

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/DetailsDescriptionText"
                    android:text="@string/DescriptionText"
                    android:layout_below="@id/DetailsZipContainer"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="8dp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/regActivityColorAccentSecondary"
                    android:textSize="16sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_below="@id/DetailsDescriptionText"
                    android:hint="@string/ShortDescriptionText"
                    android:id="@+id/DetailsDescriptionEditText"
                    android:layout_marginStart="32dp"
                    android:inputType="textLongMessage|textAutoComplete|textAutoCorrect|textMultiLine"
                    android:layout_marginEnd="32dp"
                    android:textCursorDrawable="@null"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:paddingTop="24dp"
                    android:paddingBottom="24dp"
                    android:gravity="top|start"
                    android:background="@drawable/edit_text_background"/>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ProfilePicContainer"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_below="@id/DetailsDescriptionEditText">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:textColor="@color/regActivityColorAccentSecondary"
                        android:textSize="24sp"
                        android:layout_marginTop="16dp"
                        android:text="@string/ProfilePic"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/ProfilePicText"/>

                    <ImageView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_below="@id/ProfilePicText"
                        android:src="@drawable/profile_placeholder"
                        android:id="@+id/ProfilePicImage"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ProfilePicImage"
                        android:layout_centerHorizontal="true"
                        android:text="@string/ProfilePicButton"
                        android:background="@drawable/button_background"
                        android:textColor="@color/regActivityColorAccentPrimary"
                        android:textSize="24sp"
                        android:paddingEnd="24dp"
                        android:paddingStart="24dp"
                        android:id="@+id/ProfilePicButton"/>

                </RelativeLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/DetailsNextButton"
                    android:text="@string/NextPageButton"
                    android:background="@drawable/button_background"
                    android:textColor="@color/regActivityColorAccentPrimary"
                    android:textSize="24sp"
                    android:layout_marginTop="32dp"
                    android:layout_below="@id/ProfilePicContainer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="32dp"/>

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>