<?xml version="1.0" encoding="utf-8"?>

<!--
- Created by Piyush Garg on 08/20/18.
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/PasswordContainer"
    android:background="@color/regActivityColorPrimaryTransparent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:id="@+id/PasswordFragmentToolbar"
        android:background="#00FFFFFF"
        android:elevation="0dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PasswordFragmentLayout"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginBottom="32dp"
        android:layout_centerInParent="true"
        android:background="@drawable/fragment_background">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextViewPassword"
            android:textColor="@color/regActivityColorAccentSecondary"
            android:textSize="16sp"
            android:text="@string/PasswordText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textCursorDrawable="@null"
            android:layout_below="@id/TextViewPassword"
            android:id="@+id/EditTextPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:maxLength="16"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/EditTextReenterPassword"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextViewPasswordIncorrect"
            android:textColor="@color/regActivityNegativeColor"
            android:textSize="12sp"
            android:text="@string/WrongPasswordText"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            android:layout_below="@id/EditTextPassword"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextViewReenterPassword"
            android:textColor="@color/regActivityColorAccentSecondary"
            android:textSize="16sp"
            android:text="@string/ReenterPasswordText"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textCursorDrawable="@null"
            android:layout_below="@id/TextViewReenterPassword"
            android:id="@+id/EditTextReenterPassword"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:maxLength="16"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_below="@id/EditTextReenterPassword"
            android:layout_centerHorizontal="true"
            android:id="@+id/TextViewPasswordReenterIncorrect"
            android:textColor="@color/regActivityNegativeColor"
            android:textSize="12sp"
            android:text="@string/UnmatchedPasswordText"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/NextPageButton"
            android:textColor="@color/regActivityColorAccentPrimary"
            android:textSize="24sp"
            android:id="@+id/PasswordNextButton"
            android:layout_marginTop="32dp"
            android:layout_below="@id/TextViewPasswordIncorrect"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"/>

    </RelativeLayout>

</RelativeLayout>